--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
                                 <i class="fa-solid fa-check-circle me-2"></i>SI CONFIRMO
                             </a>
                         </div>
-                        <a href="url_de_destino" target="_blank">
-                            <img src="./assets/images/mapa.jpg" alt="Descripción de la imagen" style="max-width: 100%; height: auto;">
-                        </a>                                               
+                        <div style="position:relative; overflow:hidden; padding-bottom:40%;">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12054.21756779898!2d-70.00809794715185!3d-15.819920544527294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDU4JzA3LjMiTiBMTEM!5e0!3m2!1ses!2smx!4v1627605678951!5m2!1ses!2smx" width="100%" height="100%" frameborder="0" style="border:0; position:absolute; top:0; left:0; width:100%; height:100%;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>                                               
                     </div>
 
     <!-- Para agregar mas elementos -->   
