--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
                 </div>
                 <div class="text-center">
                     <h1 class="font-arabic" style="font-size: 2rem">NOSOTROS</h1>
-                <p class="pb-3 px-3">
-                    El camino de la vida se vuelve más placentero si lo recorremos juntos, #NOSCASAMOS
+                <p class="pb-3 px-3" style="color: white;">
+                     El camino de la vida se vuelve más placentero si lo recorremos juntos, #NOSCASAMOS
                 </p>
+
 
                 <!-- Love animation -->
                 <div class="position-relative">
