--- a/index.html
+++ b/index.html
@@ -202,38 +202,39 @@
                 <div class="img-crop border border -3 border-light shadow my-4 mx-auto">
                     <img src="./assets/images/aros.png">
                 </div>
-                <p style="font-size: 0.9rem;" class="px-2">
-                    <table style="font-size: 0.9rem; margin: 0 auto;">
-                        <tr>
-                            <td class="px-2" style="text-align: center;">Eulogio Zanabria Huisa (♰)</td>
-                            <td>-</td>
-                            <td style="text-align: center;">Juan Chambilla Pino</td>
-                        </tr>
-                        <tr>
-                            <td class="px-2" style="text-align: center;">Marcelina Galvez Flores</td>
-                            <td>-</td>
-                            <td style="text-align: center;">Mery Alata Aguirre</td>
-                        </tr>
-                    </table>
-                </p>
+                <p style="font-size: 0.9rem; color: white;" class="px-2">
+    <table style="font-size: 0.9rem; margin: 0 auto; color: white;">
+        <tr>
+            <td class="px-2" style="text-align: center; color: white;">Eulogio Zanabria Huisa (♰)</td>
+            <td style="color: white;">-</td>
+            <td style="text-align: center; color: white;">Juan Chambilla Pino</td>
+        </tr>
+        <tr>
+            <td class="px-2" style="text-align: center; color: white;">Marcelina Galvez Flores</td>
+            <td style="color: white;">-</td>
+            <td style="text-align: center; color: white;">Mery Alata Aguirre</td>
+        </tr>
+    </table>
+</p>
         
                 <h1 class="font-esthetic" style="font-size: 2rem;">
                     Nuestros Padrinos:
                 </h1>
-                <p style="font-size: 0.9rem;" class="px 2">
-                    <table style="font-size: 0.9rem; margin: 0 auto;">
-                        <tr>
-                            <td class="px-2" style="text-align: center;">Dr. Edelfre Flores Velasquez</td>
-                            <td>-</td>
-                            <td style="text-align: center;">Lic. Ines Mamani Llanos</td>
-                        </tr>
-                        <tr>
-                            <td class="px-2" style="text-align: center;">Dr. James S. Araca Astorga</td>
-                            <td>-</td>
-                            <td style="text-align: center;">Lic. Lourdes M. Madariaga Colque</td>
-                        </tr>
-                    </table>
-                </p>
+                <p class="font-esthetic" style="font-size: 0.9rem; color: white;" class="px 2">
+    <table style="font-size: 0.9rem; margin: 0 auto; color: white;">
+        <tr>
+            <td class="px-2" style="text-align: center; color: white;">Dr. Edelfre Flores Velasquez</td>
+            <td style="color: white;">-</td>
+            <td style="text-align: center; color: white;">Lic. Ines Mamani Llanos</td>
+        </tr>
+        <tr>
+            <td class="px-2" style="text-align: center; color: white;">Dr. James S. Araca Astorga</td>
+            <td style="color: white;">-</td>
+            <td style="text-align: center; color: white;">Lic. Lourdes M. Madariaga Colque</td>
+        </tr>
+    </table>
+</p>
+
             </div>
         </div>
     </section>   
@@ -260,25 +261,26 @@
                     <div class="border rounded-pill shadow py-2 px-4 mx-2 mb-4">
 
                         <!-- Ganti waktunya pada data-waktu (sesuai format tersebut) -->
-                        <div class="row justify-content-center" data-time="2024-04-26 10:00:00" id="count-down">
-                            <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="day">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Días</small>
-                            </div>
-                            <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="hour">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Horas</small>
-                            </div>
-                            <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="minute">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Minutos</small>
-                            </div>
-                            <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="second">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Seg.</small>
-                            </div>
-                        </div>
+                        <div class="row justify-content-center" data-time="2024-04-26 10:00:00" id="count-down" style="color: white;">
+    <div class="col-3 p-1">
+        <h2 class="d-inline m-0 p-0" id="day">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Días</small>
+    </div>
+    <div class="col-3 p-1">
+        <h2 class="d-inline m-0 p-0" id="hour">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Horas</small>
+    </div>
+    <div class="col-3 p-1">
+        <h2 class="d-inline m-0 p-0" id="minute">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Minutos</small>
+    </div>
+    <div class="col-3 p-1">
+        <h2 class="d-inline m-0 p-0" id="second">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Seg.</small>
+    </div>
+</div>
+
                     </div>
 
-                    <p style="font-size: 0.9rem;" class="mt-4 py-2">
-                        Estamos complacidos de compartir con Uds. este momento especial de nuestras vidas :
-                    </p>
+                    <p style="font-size: 0.9rem; color: white;" class="mt-4 py-2">
+    Estamos complacidos de compartir con Uds. este momento especial de nuestras vidas :
+</p>
 
                     <!-- Love animation -->
                     <div class="position-relative">
@@ -292,25 +294,26 @@
                     <div class="overflow-x-hidden">
                         <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
                             <h1 class="font-esthetic" style="font-size: 2rem;">Ceremonia Religiosa</h1>
-                            <p><i class="fas fa-calendar-alt"></i> <span>Fecha: 26 de abril de 2024</span></p>
-                            <p>10:00 AM - Iglesia Asunción de Chucuito</p>
+                            <p style="color: white;"><i class="fas fa-calendar-alt"></i> <span>Fecha: 26 de abril de 2024</span></p>
+<p style="color: white;">10:00 AM - Iglesia Asunción de Chucuito</p>
                         </div>
 
                         <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                             <h1 class="font-esthetic" style="font-size: 2rem;">Ceremonia Civil</h1>
-                            <p><i class="fas fa-calendar-alt"></i> <span>Fecha: 26 de abril de 2024</span></p>
-                            <p>11:00 AM - Municipalidad Distrital de Chucuito</p>
+                            <p style="color: white;"><i class="fas fa-calendar-alt"></i> <span>Fecha: 26 de abril de 2024</span></p>
+<p style="color: white;">11:00 AM - Municipalidad Distrital de Chucuito</p>
                         </div>
                     </div>
 
-                    <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                        <a href="https://maps.app.goo.gl/YhPcv739ysUWPeQq9" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3">
-                            <i class="fa-solid fa-map-location-dot me-2"></i>Ubicación
-                        </a>
-                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
-                            Iglesia Asunción de Chucuito, Puno
-                        </p>
-                    </div>
+                    <div class="py-2" data-aos="fade-up" data-aos-duration="1500" style="color: white;">
+    <a href="https://maps.app.goo.gl/YhPcv739ysUWPeQq9" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3">
+        <i class="fa-solid fa-map-location-dot me-2"></i>Ubicación
+    </a>
+    <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem; color: white;">
+        Iglesia Asunción de Chucuito, Puno
+    </p>
+</div>
+
                 </div>
             </div>
         </section>
@@ -384,31 +387,33 @@
                     <h1 class="font-esthetic mt-0 mb-3" style="font-size: 3rem;">Recepción de invitados</h1>
 
                     <div class="overflow-x-hidden">
-                        <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
-                            <p>13:30 PM - Salón de eventos "LUXURY"</p>
-                            <p>Jr. Juan Dueñas Cuadra 5 - Barrio San Jose | Puno</p>
-                        </div>
+                        <div class="py-2" data-aos="fade-right" data-aos-duration="1500" style="color: white;">
+    <p>13:30 PM - Salón de eventos "LUXURY"</p>
+    <p>Jr. Juan Dueñas Cuadra 5 - Barrio San Jose | Puno</p>
+</div>
+
                     </div>
 
-                    <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                        <a href="https://maps.app.goo.gl/EnQwJ9WeDWascSJx6" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3">
-                            <i class="fa-solid fa-map-location-dot me-2"></i>Ubicación del local
-                        </a>
-                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
-                            Salón de eventos "LUXURY"
-                        </p>
-                        <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                            <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
-                                CONFIRMAR ASISTENCIA:
-                            </p>
-                            <a href="https://forms.gle/TUNYSnh1oTHU6mPd7" target="_blank" class="btn btn-outline-data-bs-theme btn-sm rounded-pill shadow-sm mb-2 px-3">
-                                <i class="fa-solid fa-check-circle me-2"></i>SI CONFIRMO
-                            </a>
-                        </div>
-                        <div style="position:relative; overflow:hidden; padding-bottom:40%;">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12054.21756779898!2d-70.00809794715185!3d-15.819920544527294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDU4JzA3LjMiTiBMTEM!5e0!3m2!1ses!2smx!4v1627605678951!5m2!1ses!2smx" width="100%" height="100%" frameborder="0" style="border:0; position:absolute; top:0; left:0; width:100%; height:100%;" allowfullscreen="" loading="lazy"></iframe>
-                        </div>                                               
-                    </div>
+                    <div class="py-2" data-aos="fade-up" data-aos-duration="1500" style="color: white;">
+    <a href="https://maps.app.goo.gl/EnQwJ9WeDWascSJx6" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3">
+        <i class="fa-solid fa-map-location-dot me-2"></i>Ubicación del local
+    </a>
+    <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem; color: white;">
+        Salón de eventos "LUXURY"
+    </p>
+    <div class="py-2" data-aos="fade-up" data-aos-duration="1500" style="color: white;">
+        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem; color: white;">
+            CONFIRMAR ASISTENCIA:
+        </p>
+        <a href="https://forms.gle/TUNYSnh1oTHU6mPd7" target="_blank" class="btn btn-outline-data-bs-theme btn-sm rounded-pill shadow-sm mb-2 px-3">
+            <i class="fa-solid fa-check-circle me-2"></i>SI CONFIRMO
+        </a>
+    </div>
+    <div style="position:relative; overflow:hidden; padding-bottom:40%;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12054.21756779898!2d-70.00809794715185!3d-15.819920544527294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDU4JzA3LjMiTiBMTEM!5e0!3m2!1ses!2smx!4v1627605678951!5m2!1ses!2smx" width="100%" height="100%" frameborder="0" style="border:0; position:absolute; top:0; left:0; width:100%; height:100%;" allowfullscreen="" loading="lazy"></iframe>
+    </div>                                               
+</div>
+
 
     <!-- Para agregar mas elementos -->   
 
@@ -418,7 +423,7 @@
 
         <section class="container-fluid d-flex justify-content-center align-items-center">
             <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">LOS ESPERAMOS</p>
+                <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem; color: white;">LOS ESPERAMOS</p>
             </div>
             
             <!-- Espacio adicional debajo del texto -->
