--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#mempelai">
+                <a class="nav-link" href="#nosotros">
                     <i class="fa-solid fa-user-group"></i>
                     <span class="d-block" style="font-size: 0.7rem;">Nosotros</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#tanggal">
+                <a class="nav-link" href="#fecha">
                     <i class="fa-solid fa-calendar-check"></i>
                     <span class="d-block" style="font-size: 0.7rem;">Fecha</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#galeri">
+                <a class="nav-link" href="#fotos">
                     <i class="fa-solid fa-images"></i>
                     <span class="d-block" style="font-size: 0.7rem;">Fotos</span>
                 </a>
@@ -109,7 +109,7 @@
 
 
         <!-- Mempelai -->
-        <section class="container-fluid p-0" id="home" style="background-image: url('./assets/images/bg_5.jpg'); background-size: cover; background-position: center; height: 100vh;">
+        <section class="container-fluid p-0" id="nosotros" style="background-image: url('./assets/images/bg_5.jpg'); background-size: cover; background-position: center; height: 100vh;">
                 <!-- Love animation -->
                 <div class="position-relative">
                     <div class="position-absolute" style="top: 0%; right: 10%;">
@@ -252,7 +252,7 @@
      
 
         <!-- Tanggal -->
-        <section class="data-bs-theme-section" id="tanggal">
+        <section class="data-bs-theme-section" id="fecha">
 
             <div class="container">
                 <div class="text-center">
@@ -328,7 +328,7 @@
         </div>
 
         <!-- Galeri Foto -->
-        <section id="galeri">
+        <section id="fotos">
             <div class="container pb-2 pt-4">
                 <div class="card-body border rounded-4 shadow p-3">
                     <h1 class="font-esthetic text-center py-3" data-aos="fade-down" data-aos-duration="1500" style="font-size: 2rem;">Fotos</h1>
