--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                     <span class="d-block" style="font-size: 0.7rem;">Fotos</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#local">
+                    <i class="fa-solid fa-images"></i>
+                    <span class="d-block" style="font-size: 0.7rem;">Fotos</span>
+                </a>
+            </li>
         </ul>
     </nav>
 
@@ -377,7 +383,7 @@
         <!-- Wave Separator -->
 
 
-        <section class="container-fluid p-0" id="home" style="background-image: url('./assets/images/bg_4.jpg'); background-size: cover; background-position: center; height: 100vh;">
+        <section class="container-fluid p-0" id="local" style="background-image: url('./assets/images/bg_4.jpg'); background-size: cover; background-position: center; height: 100vh;">
             <!-- Love Gift -->
         <div class="container">
             <div class="py-4">
