--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#local">
-                    <i class="fa-solid fa-images"></i>
-                    <span class="d-block" style="font-size: 0.7rem;">Fotos</span>
+                    <i class="fa-solid fa-map-marker-alt"></i>
+                    <span class="d-block" style="font-size: 0.7rem;">Local</span>
                 </a>
             </li>
         </ul>
