--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <main class="text-data-bs-theme" data-bs-spy="scroll" data-bs-target="#navbar-menu" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
         <!-- Home -->
-        <section style="background-image: url('./assets/images/bg_4.jpg'); background-size: cover; background-position: center; height: 100vh;">
+        <section id="home" style="background-image: url('./assets/images/bg_4.jpg'); background-size: cover; background-position: center; height: 100vh;">
 
             <div class="text-center">
                 <i class="fas fa-ring"></i>
