--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
         
                 <h1 class="font-esthetic" style="font-size: 4rem;">Aldo & Jaqueline</h1>
-                <p class="mb-0" style="font-size: 1.5rem; color: white;">Puno, 26 abril 2024</p>
+                <p class="mb-0" style="font-size: 1.5rem; color: white;">Viernes, 26 abril 2024</p>
         
                 <a class="btn btn-outline-data-bs-theme btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=NnF0dnVmcXN2YW9hZm9qcTBiZGNmazIyNTQgZWR3aW5nb2VkMTJAbQ&tmsrc=edwingoed12%40gmail.com" style="color: white;">
     <i class="fa-solid fa-calendar-check me-2"></i>Agendar la fecha
