--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
         <section class="container-fluid d-flex justify-content-center align-items-center">
             <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
                 <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem; color: white;">LOS ESPERAMOS</p>
+                <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem; color: white;">"Los niños son mas lindos dormidos, y los papás bailando toda la noche"</p>
             </div>
             
             <!-- Espacio adicional debajo del texto -->
